@@ -34,17 +34,17 @@ void render_DirectionalLight (struct X3D_DirectionalLight *node) {
 			vec[2] = -((node->direction).c[2]);
 			vec[3] = 0;
 			glLightfv(light, GL_POSITION, vec);
-			vec[0] = ((node->color).c[0]) * (node->intensity) /*cget*/;
-			vec[1] = ((node->color).c[1]) * (node->intensity) /*cget*/;
-			vec[2] = ((node->color).c[2]) * (node->intensity) /*cget*/;
+			vec[0] = ((node->color).c[0]) * (node->intensity);
+			vec[1] = ((node->color).c[1]) * (node->intensity);
+			vec[2] = ((node->color).c[2]) * (node->intensity);
 			vec[3] = 1;
 			glLightfv(light, GL_DIFFUSE, vec);
 			glLightfv(light, GL_SPECULAR, vec);
 
 			/* Aubrey Jaffer */
-			vec[0] = ((node->color).c[0]) * (node->ambientIntensity) /*cget*/;
-			vec[1] = ((node->color).c[1]) * (node->ambientIntensity) /*cget*/;
-			vec[2] = ((node->color).c[2]) * (node->ambientIntensity) /*cget*/;
+			vec[0] = ((node->color).c[0]) * (node->ambientIntensity);
+			vec[1] = ((node->color).c[1]) * (node->ambientIntensity);
+			vec[2] = ((node->color).c[2]) * (node->ambientIntensity);
 
 			glLightfv(light, GL_AMBIENT, vec);
 		}
@@ -78,17 +78,17 @@ void light_PointLight (struct X3D_PointLight *node) {
                                         ((node->attenuation).c[2]));
 
 
-                                vec[0] = ((node->color).c[0]) * (node->intensity) /*cget*/;
-                                vec[1] = ((node->color).c[1]) * (node->intensity) /*cget*/;
-                                vec[2] = ((node->color).c[2]) * (node->intensity) /*cget*/;
+                                vec[0] = ((node->color).c[0]) * (node->intensity);
+                                vec[1] = ((node->color).c[1]) * (node->intensity);
+                                vec[2] = ((node->color).c[2]) * (node->intensity);
                                 vec[3] = 1;
                                 glLightfv(light, GL_DIFFUSE, vec);
                                 glLightfv(light, GL_SPECULAR, vec);
 
                                 /* Aubrey Jaffer */
-                                vec[0] = ((node->color).c[0]) * (node->ambientIntensity) /*cget*/;
-                                vec[1] = ((node->color).c[1]) * (node->ambientIntensity) /*cget*/;
-                                vec[2] = ((node->color).c[2]) * (node->ambientIntensity) /*cget*/;
+                                vec[0] = ((node->color).c[0]) * (node->ambientIntensity);
+                                vec[1] = ((node->color).c[1]) * (node->ambientIntensity);
+                                vec[2] = ((node->color).c[2]) * (node->ambientIntensity);
                                 glLightfv(light, GL_AMBIENT, vec);
 
                                 /* XXX */
@@ -99,6 +99,7 @@ void light_PointLight (struct X3D_PointLight *node) {
 
 
 void light_SpotLight (struct X3D_SpotLight *node) {
+	float ft;
                 if(((node->on))) {
                         int light = nextlight();
                         if(light >= 0) {
@@ -124,25 +125,29 @@ void light_SpotLight (struct X3D_SpotLight *node) {
                                         ((node->attenuation).c[2]));
         
         
-                                vec[0] = ((node->color).c[0]) * (node->intensity) /*cget*/;
-                                vec[1] = ((node->color).c[1]) * (node->intensity) /*cget*/;
-                                vec[2] = ((node->color).c[2]) * (node->intensity) /*cget*/;
+                                vec[0] = ((node->color).c[0]) * (node->intensity);
+                                vec[1] = ((node->color).c[1]) * (node->intensity);
+                                vec[2] = ((node->color).c[2]) * (node->intensity);
                                 vec[3] = 1; 
                                 glLightfv(light, GL_DIFFUSE, vec);
                                 glLightfv(light, GL_SPECULAR, vec);
 
                                 /* Aubrey Jaffer */
-                                vec[0] = ((node->color).c[0]) * (node->ambientIntensity) /*cget*/;
-                                vec[1] = ((node->color).c[1]) * (node->ambientIntensity) /*cget*/;
-                                vec[2] = ((node->color).c[2]) * (node->ambientIntensity) /*cget*/;
+                                vec[0] = ((node->color).c[0]) * (node->ambientIntensity);
+                                vec[1] = ((node->color).c[1]) * (node->ambientIntensity);
+                                vec[2] = ((node->color).c[2]) * (node->ambientIntensity);
 
                                 glLightfv(light, GL_AMBIENT, vec);
 
-                                /* XXX */
-                                glLightf(light, GL_SPOT_EXPONENT,
-                                        0.5/((node->beamWidth) /*cget*/+0.1));
-                                glLightf(light, GL_SPOT_CUTOFF,
-                                        (node->cutOffAngle) /*cget*//3.1415926536*180);
+				ft = 0.5/(node->beamWidth +0.1);
+				if (ft>128.0) ft=128.0;
+				if (ft<0.0) ft=0.0;
+                                glLightf(light, GL_SPOT_EXPONENT,ft);
+
+				ft = node->cutOffAngle /3.1415926536*180;
+				if (ft>90.0) ft=90.0;
+				if (ft<0.0) ft=0.0;
+                                glLightf(light, GL_SPOT_CUTOFF, ft);
                         }
                 }
         }
